# Configuration 
set(SMI_STENCIL_SIZE_X 8192 CACHE STRING "Vertical size of domain.")
set(SMI_STENCIL_SIZE_Y 8192 CACHE STRING "Horizontal size of domain.")
set(SMI_DATATYPE float CACHE STRING "Data type of computations.")
set(SMI_VECTORIZATION_WIDTH 16 CACHE STRING "Width for exploiting vector parallelism.")
set(SMI_STENCIL_NUM_PROCS_X 2 CACHE STRING "Number of processes in X dimension.")
set(SMI_STENCIL_NUM_PROCS_Y 4 CACHE STRING "Number of processes in Y dimension.")
math(EXPR SMI_STENCIL_NUM_PROCS "${SMI_STENCIL_NUM_PROCS_X} * ${SMI_STENCIL_NUM_PROCS_Y}")
set(SMI_KMEANS_DIMS 64 CACHE STRING "Number of dimensions for K-means.")
set(SMI_KMEANS_CLUSTERS 8 CACHE STRING "Number of clusters to compute.")

if(SMI_DATATYPE STREQUAL "float")
  set(SMI_COMM_DATATYPE "SMI_FLOAT")
else()
  message(FATAL_ERROR "Unsupported data type \"${SMI_DATATYPE}\".")
endif()

configure_file(include/stencil.h.in stencil.h)
configure_file(include/kmeans.h.in kmeans.h)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
include_directories(${CMAKE_CURRENT_BINARY_DIR})

find_package(PythonInterp 3)

add_smi_kernel("${CMAKE_CURRENT_SOURCE_DIR}/kernels/stencil_simple.cl" OFF 1 0)
add_smi_executable("stencil_simple")
if(PythonInterp_FOUND)
  add_smi_kernel("${CMAKE_CURRENT_SOURCE_DIR}/kernels/stencil_spatial_tiling.cl" ON 1 0)
  add_smi_executable("stencil_spatial_tiling")
  add_smi_kernel("${CMAKE_CURRENT_SOURCE_DIR}/kernels/stencil_smi.cl" OFF ${SMI_STENCIL_NUM_PROCS} 4)
  add_smi_executable("stencil_smi")
  add_smi_kernel("${CMAKE_CURRENT_SOURCE_DIR}/kernels/stencil_smi_interleaved.cl" OFF ${SMI_STENCIL_NUM_PROCS} 4)
  add_smi_executable("stencil_smi_interleaved")
  # Rodinia hotspot kernel
  configure_file(include/hotspot.h.in hotspot.h)
  add_smi_kernel("${CMAKE_CURRENT_SOURCE_DIR}/kernels/hotspot_smi.cl" OFF ${SMI_STENCIL_NUM_PROCS} 4)
  add_smi_executable("hotspot_smi")
endif()
add_smi_kernel("${CMAKE_CURRENT_SOURCE_DIR}/kernels/kmeans_aos.cl" OFF 1 0)
add_smi_executable("kmeans_aos")
